--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,12 +75,12 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Lato
+    - family: Montserrat
       fonts:
-        - asset: fonts/Lato-Regular.ttf
-        - asset: fonts/Lato-Italic.ttf
+        - asset: fonts/Montserrat-Regular.ttf
+        - asset: fonts/Montserrat-Italic.ttf
           style: italic
-        - asset: fonts/Lato-Bold.ttf
+        - asset: fonts/Montserrat-Bold.ttf
           weight: 700
   #   - family: Trajan Pro
   #     fonts:
