--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   pinput: ^3.0.1
   flutter_dotenv: ^5.1.0
   flutter_secure_storage: ^9.0.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
