--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_secure_storage: ^9.0.0
   dotted_border: ^2.1.0
+  file_picker: ^6.1.1
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
