--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   pinput: ^3.0.1
   flutter_dotenv: ^5.1.0
   flutter_secure_storage: ^9.0.0
+  open_file: ^3.3.2
+  dio: ^5.3.3
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
