--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   open_file: ^3.3.2
   dio: ^5.3.3
   path_provider: ^2.1.1
+  webview_flutter: ^2.3.0
 
 dev_dependencies:
   flutter_test:
