--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   dio: ^5.3.3
   path_provider: ^2.1.1
   webview_flutter: ^2.3.0
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
